fixed mobile overflow issue

--- a/wp-content/plugins/projectdoom/doom-app/assets/css/app.css
+++ b/wp-content/plugins/projectdoom/doom-app/assets/css/app.css
@@ -1,5 +1,5 @@
 body {
-	overflow-x: hidden;
+	/* overflow-x: hidden; */
 	font-size: 100%;
 	color: #555;
 	-webkit-font-smoothing: antialiased; /* Fix for webkit rendering */
